[package]
name = "nb-to-query"
version = "0.1.0"
edition = "2021"
description = "a simple trait for nb-to-query-derive"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
nb-to-query-derive = { path = "../nb-to-query-derive" }

[features]
chrono = []
